<resources>
    <string name="app_name">MyProperGitap</string>
    <string name="username">YosuaPWH</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profil">Profil</string>
    <string name="tablayout">TabLayout</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="not_found">Sorry, we couldn\'t find any users matching \'%1$s\'</string>
    <string name="no_favorite">No favorite users have been added yet. Please add some user to favorite.</string>
    <string name="no_follower">Sorry, this user does not currently have any followers.</string>
    <string name="no_following">Sorry, there are currently no accounts being followed by this user</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="setting_profile">Setting Profile</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="load_more">Load More..</string>
    <string name="wrong_connection">Sorry, there is something wrong with your connection or the server</string>
</resources>